<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    tools:viewBindingIgnore="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/activity_login_TextView"
        android:textColor="@color/golden"
        android:textSize="44sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/loading"
        android:fontFamily="times"
        android:textAlignment="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_login_inner_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/fade_background_red">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:background="@drawable/linear_toggle_buttons_background_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:id="@+id/activity_login_linear_layout">
            <ToggleButton
                android:layout_width="wrap_content"
                android:id="@+id/activity_login_toggle_fizicka"
                android:layout_height="30dp"
                android:textOn="@string/fizicka"
                android:background="@drawable/toggle_button_background_fizicka"
                android:textOff="@string/fizicka"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_marginEnd="5dp"
                android:checked="true"/>
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/toggle_button_background_pravna"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:id="@+id/activity_login_toggle_pravna"
                android:layout_marginStart="5dp"
                android:textOn="@string/pravna"
                android:textOff="@string/pravna"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/activity_login_linear_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="30dp"
            android:gravity="center_horizontal"
            android:id="@+id/activity_login_linear_layout_logo">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo2"/>

            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naziv_banke"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/activity_login_username"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="30dp"
            android:id="@+id/activity_login_linear_layout_text">
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dobro_dosli"
                android:textAllCaps="true"
                android:textSize="15sp"/>
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nasa_mbanka"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="30sp"/>
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stanovnistvo"
                android:textStyle="bold"
                android:id="@+id/activity_login_text_lica"
                android:textAllCaps="false"
                android:textSize="25sp"/>
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brzo_lako_sigurno"
                android:textAllCaps="false"
                android:textSize="15sp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/activity_login_username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_edit_text_golden"
            android:hint="@string/username"
            android:padding="10dp"
            android:textColorHint="@color/gray5"
            app:layout_constraintBottom_toTopOf="@id/activity_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/activity_login_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_edit_text_golden"
            android:hint="@string/password"
            android:textColorHint="@color/gray5"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/activity_login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/activity_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/loading"
            android:text="@string/login"
            android:textColor="@color/golden"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>