<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/fragment_racuni_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/gray5"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:id="@+id/fragment_racuni_racuna_tip_racuna"
            android:text="@string/tip_racuna"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_racuni_racuna_tip_racuna"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/fragment_racuni_racun_broj_racuna"
            android:text="@string/broj_racuna"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_racuni_racun_broj_racuna"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/fragment_racuni_raspolozivo"
            android:text="@string/raspolozivo"
            android:gravity="center"
            android:textColor="@color/gray9"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_racuni_raspolozivo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/fragment_racuni_inzos_raspolozivog"
            android:text="89.270,00"
            android:gravity="center"
            android:textColor="@color/golden_darker"
            android:textSize="25sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_racuni_raspolozivo"
            app:layout_constraintStart_toEndOf="@id/fragment_racuni_inzos_raspolozivog"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/fragment_racuni_inzos_valuta"
            android:text="RSD"
            android:gravity="center_vertical"
            android:textColor="@color/golden_darker"
            android:textSize="25sp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:id="@+id/activity_login_linear_layout">
            <ToggleButton
                android:layout_width="200dp"
                android:id="@+id/racuni_toggle_detalji"
                android:layout_height="40dp"
                android:textOn="@string/detalji_racuna"
                android:background="@android:color/transparent"
                android:textOff="@string/detalji_racuna"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:textColor="@color/color_white_golden_toggle_button"
                android:layout_marginEnd="5dp"
                android:checked="true"/>
            <ToggleButton
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:textColor="@color/color_white_golden_toggle_button"
                android:id="@+id/racuni_toggle_transakcije"
                android:layout_marginStart="5dp"
                android:textOn="@string/transakcije"
                android:textOff="@string/transakcije"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/fragment_racuni_frame"
        app:layout_constraintTop_toBottomOf="@id/fragment_racuni_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>