<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray9"
    tools:context=".user.fragments.racuni.DetaljiRacunaFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/fragment_detalji_n"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/fragment_detalji_naziv"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/naziv"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/gray5"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/fragment_detalji_naziv_racuna"
            app:layout_constraintTop_toBottomOf="@id/fragment_detalji_naziv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tip_racuna"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
        />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/fragment_detalji_s"
        app:layout_constraintTop_toBottomOf="@id/fragment_detalji_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/fragment_detalji_stanje"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/stanje_racuna"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/gray5"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/fragment_detalji_stanje_racuna"
            app:layout_constraintTop_toBottomOf="@id/fragment_detalji_stanje"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tip_racuna"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/fragment_detalji_r"
        app:layout_constraintTop_toBottomOf="@id/fragment_detalji_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/fragment_detalji_raspolozivo"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/rezervisana_sredstva"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/gray5"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/fragment_detalji_raspolozivo_stanje"
            app:layout_constraintTop_toBottomOf="@id/fragment_detalji_raspolozivo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tip_racuna"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/fragment_detalji_v"
        app:layout_constraintTop_toBottomOf="@id/fragment_detalji_r"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/fragment_detalji_vlasnik"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/vlasnik"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/gray5"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/fragment_detalji_ime_vlasnika"
            app:layout_constraintTop_toBottomOf="@id/fragment_detalji_vlasnik"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tip_racuna"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>